[package]
name = "rusty-ripper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.17"
crossterm = "0.28.1"
indicatif = "0.17.8"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.209"
serde_json = "1.0.127"
tokio = { version = "1", features = ["full"] }

